--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
 -e .
 
+datasets==2.15.0
+huggingface-hub==0.19.4
 jupyter
+matplotlib==3.8.0
+numpy==1.26.0
+pandas==2.1.1
+scikit-learn==1.2.2
+scipy==1.11.3
+seaborn==0.13.1
+sentence-transformers==2.2.2
+torch==2.1.0
+tqdm==4.66.1
+
